--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
     <title>Document Search</title>
 </head>
 <body>
-    <h1>Document Search</h1>
+    <h1>KU Job Search</h1>
     <form action="/search" method="post">
         <label for="query">Enter your search query:</label><br>
         <input type="text" id="query" name="query"><br>
